--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,21 @@
     font-family: 'Raleway', sans-serif;
     box-shadow: 0px 3px 6px #00000029;
 }
-.header__container{
-    width: 1320px;
-    background-color: yellow;
+.container {
+    width: 1352px;
     margin: 0 auto;
+}
+.header__container{
+    height: 100%;  
+    background-color: yellow;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header__nav{
+    display: flex;
+
+}
+ul li{
+    list-style: none;
 }
